# symmetrical-spork

./: .gitignore  CLAUDE.md
agent-appoiments-v2/: .env.example  .gitignore  CHALLENGE_TESTS_QUICKSTART.md  CHANGELOG.md  CHAT_INSTRUCTIONS.md  CHAT_QUICKSTART.md  COMMIT_CHECKLIST.md  GIT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_AGNOSTIC_UPDATE.md  LATENCY_ANALYSIS_REPORT.md  MOCK_API_GUIDE.md  MVP_READINESS_REPORT.md  PRODUCTION_FIX_SUMMARY.md  PRODUCTION_TEST_RESULTS.md  QUICKSTART.md  README.md  SECURITY_NOTES.md  TESTING_GUIDE.md  analyze_latency_deep.py  api_server.py  chat_cli.py  check_langsmith_metrics.py  create_review_package.sh  debug_test.py  get_error_details.py  langgraph.json  mock_api.py  pyproject.toml  run_challenge_tests.sh  run_chat.sh  run_mock_api.sh  setup_wizard.py  simple_api.py  terminal_client.py  test_agent_interactive.py  test_confirmation_diagnosis.py  test_escalation_message.py  test_langsmith_tracing.py  test_runner.py  (+4 more)
agent-appoiments-v2/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent-appoiments-v2/docs/: LANGSMITH.md  LANGSMITH_QUICKSTART_ES.md  LANGSMITH_VS_STUDIO_ES.md  LOAD_TEST_RESULTS.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_RESULTS_v2.md  RESCHEDULING_FLOW.md  SESSION-2025-11-12-cancellation-fixes.md  concurrency-test-results.md  production-reality-verdict.md  root-cause-analysis.md  v1.10-optimizations.md  v1.10-production-verdict.md  v1.11-production-verdict.md  v1.9-optimizations.md
(+130 files in other folders)
