[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment-agent"
version = "1.10.0"
description = "Optimized appointment booking agent with streaming API (v1.10 - latency optimizations)"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.3",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    "langgraph-checkpoint>=1.0.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "llm-guard>=0.3.12",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "psycopg[pool]>=3.1.0",
    "langsmith>=0.1.0",
    # v1.9 - Streaming API dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
]
